added id for create button

--- a/todo.HTML
+++ b/todo.HTML
@@ -8,11 +8,11 @@
 <body>
     <h1>ToDo list</h1>
     <input type="text" placeholder="enter your task">
-    <button>Add Task</button>
+    <button id="addBtn">Add Task</button>
     <ul>
         <li>Eat <button class="delete">delete</button></li>
         <li>Sleep <button class="delete">delete</button></li>
     </ul>
-    <script src="todo.JS"></script>
+    <script src="building ToDo list with DOM.JS"></script>
 </body>
 </html>
