fixed script error

--- a/todo.HTML
+++ b/todo.HTML
@@ -13,6 +13,6 @@
         <li>Eat <button class="delete">delete</button></li>
         <li>Sleep <button class="delete">delete</button></li>
     </ul>
-    <script src="building ToDo list with DOM.JS"></script>
+    <script src="todo.JS"></script>
 </body>
 </html>
